<?xml version="1.0" encoding="UTF-8"?>
<!-- Copyright (C) 2014-2016 The OmniROM Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
            android:key="graphics"
            android:title="@string/customize_title">

        <SwitchPreference
            android:key="fps_info"
            android:icon="@drawable/ic_fps_info"
            android:title="@string/fps_info_title"
            android:summary="@string/fps_info_summary"
            android:persistent="true" />

        <SwitchPreference
            android:key="game"
            android:icon="@drawable/ic_joystick"
            android:summary="@string/game_mode_summary"
            android:title="@string/game_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/gestures">

        <PreferenceScreen
                android:key="screen_gestures"
                android:icon="@drawable/ic_swipe"
                android:fragment="com.Galaxy.Features.Touch.ScreenOffGestureSettings"
                android:summary="@string/gestures_dashboard_summary"
                android:title="@string/screen_off_gestures" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="doze"
        android:title="@string/doze_panel_title">

        <Preference
            android:key="advanced_doze_settings"
            android:icon="@drawable/ic_doze"
            android:title="@string/ambient_display_gestures_title"
            android:summary="@string/ambient_display_gestures_summary"
            android:persistent="false" >
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.Galaxy.Features.doze"
                    android:targetClass="com.Galaxy.Features.doze.DozeSettingsActivity" />
        </Preference>
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/kcal">
         <PreferenceScreen
                android:key="kcal"
                android:fragment="com.Galaxy.Features.kcal.DisplayCalibration"
                android:summary="@string/kcal_summary"
                android:icon="@drawable/ic_kcal"
                android:title="@string/kcal_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="spectrum_profile"
        android:title="@string/spectrum_profile_title">

        <com.Galaxy.Features.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dialogTitle="@string/spectrum_dialogTitle"
            android:entries="@array/spectrum_profiles"
            android:entryValues="@array/spectrum_values"
            android:key="spectrum"
            android:summary="@string/spectrum_summary"
            android:icon="@drawable/ic_spectrum" 
            android:title="@string/spectrum_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="audio"
        android:title="@string/audio_title">

        <com.Galaxy.Features.preferences.SecureSettingSwitchPreference
            android:defaultValue="false"
            android:key="dirac_enabled"
            android:summary="@string/dirac_summary"
            android:icon="@drawable/ic_dirac"
            android:title="@string/dirac_title" />

        <com.Galaxy.Features.preferences.SecureSettingListPreference
            android:defaultValue="0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_headset_pref_entries"
            android:entryValues="@array/dirac_headset_pref_values"
            android:key="dirac_headset_pref"
            android:summary="%s"
            android:icon="@drawable/ic_headphone"
            android:title="@string/dirac_headset_title" />

        <com.Galaxy.Features.preferences.SecureSettingListPreference
            android:defaultValue="0,0,0,0,0,0,0"
            android:dependency="dirac_enabled"
            android:entries="@array/dirac_preset_pref_entries"
            android:entryValues="@array/dirac_preset_pref_values"
            android:key="dirac_preset_pref"
            android:summary="%s"
            android:icon="@drawable/ic_preset"
            android:title="@string/dirac_preset_title" />

        <com.Galaxy.Features.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="4"
            android:key="headphone_gain"
            android:max="20"
            app:min="-40"
            android:icon="@drawable/ic_earphones"
            android:title="@string/headphone_gain" />

        <com.Galaxy.Features.preferences.CustomSeekBarPreference
            android:defaultValue="0"
            android:key="microphone_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_microphone"
            android:title="@string/microphone_gain" />

        <com.Galaxy.Features.preferences.SecureSettingCustomSeekBarPreference
            android:defaultValue="0"
            android:key="earpiece_gain"
            android:max="20"
            app:min="-10"
            android:icon="@drawable/ic_earpiece"
            android:title="@string/earpiece_gain" />
    </PreferenceCategory>
</PreferenceScreen>
